# EnvServ

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
envserv/: __init__.py  errors.py  get.py
envserv/get/: base.py  variables.py
envserv/typing/: __init__.py  json.py  variable.py
